intel/bench_214_work/extr_.linuxdriversstagingxgifbXGI_main_26.c_XGIfb_validate_mode_with_main/log.txt
bench_214_work/extr_.linuxdriversstagingxgifbXGI_main_26.c_XGIfb_validate_mode_with_main/extr_.linuxdriversstagingxgifbXGI_main_26.c_XGIfb_validate_mode_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
1 error generated.
HLS FPGA Parse FAILED.
